--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Cody Slater
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: A summary of my work and interests.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
