--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ description: A summary of my work and interests.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
+
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
